# pulsar

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.mcp  README.md  RUST_BACKEND_PLAN.md  params.yaml.sample  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: python-code-simplifier.md  rust-implementation-expert.md
.gemini/: GEMINI.md
.github/workflows/: ci.yaml  ci.yml  docs.yml  release.yaml
benchmarks/: benchmark_accelerations.py
demo/: coal.py  coal_params.yaml  physionet.py
demos/: coal.py  coal_params.yaml  ecg_arrhythmia.py  physionet.py  physionet_params.yaml
demos/MCP-penguins/: README.md
demos/ehr/: ecg_arrhythmia.py  physionet.py
demos/energy/: coal.py  coal_params.yaml
demos/mmlu/: README.md  fit_cosmic_graph.py  mmlu_mulitverse_demo.ipynb  mmlu_multiverse_experiment_summary.md  mmlu_params.yaml  mmlu_topology_demo.ipynb
demos/penguins/: README.md
docs/: temporal-cosmic-graph-design.md  threshold-stability-design.md
docs/source/: api.rst  conf.py  configuration.rst  index.rst  overview.rst  pulsar.rst  user_guide.rst
pulsar/: __init__.py  artifacts.py  characterization.py  config.py  fingerprint.py  hooks.py  pipeline.py  preprocessing.py  progress.py  temporal.py
src/: ballmapper.rs  cosmic.rs  error.rs  impute.rs  jl.rs  lib.rs  minhash.rs  pca.rs  ph.rs  pseudolaplacian.rs  scale.rs  temporal.rs
tests/: conftest.py  test_ballmapper.py  test_benchmark_accelerations.py  test_characterization.py  test_cosmic.py  test_cosmic_construction_config.py  test_diagnostics.py  test_feature_evidence_parity.py  test_history.py  test_hooks.py  test_impute.py  test_mcp_feature_evidence.py  test_mcp_history.py  test_mcp_interpreter_html.py  test_mcp_minhash_advisor.py  test_mcp_registry.py  test_mcp_reporting.py  test_mcp_server_patch.py  test_mcp_workflow.py  test_numeric_precompute.py  test_pca.py  test_ph.py  test_pipeline_pca_cache.py  test_preprocessing.py  test_progress_callback.py  test_projection.py  test_pseudolaplacian.py  test_scale.py  test_session_cache_invalidation.py  test_sparse_pipeline_parity.py  test_spectral_robustness.py  test_temporal.py  test_threshold_candidates.py  test_threshold_normalization.py  test_threshold_stability_validation.py
(+98 files in other folders)
