[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "pulsar"
version = "0.1.0"
description = "Rust backend for the Thema data science library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0",
    "networkx>=3.4",
    "pandas>=2.0",
    "scikit-learn>=1.5",
    "pyyaml>=6.0",
    "maturin>=1.12.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.maturin]
features    = ["pyo3/extension-module"]
module-name = "pulsar._pulsar"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
]
