[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "thema-pulsar"
version = "0.2.0"
authors = [
    { name = "Krv Labs", email = "team@krv.ai" },
]
description = "Blazing fast implementation of the Thema algorithm."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "networkx>=3.4",
    "pandas>=2.0",
    "scikit-learn>=1.5",
    "pyyaml>=6.0",
    "maturin>=1.12.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.maturin]
features        = ["pyo3/extension-module"]
module-name     = "pulsar._pulsar"
python-packages = ["pulsar"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
]
docs = [
    "sphinx>=7.4,<9",
    "furo>=2024.8.6",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-mermaid>=0.9.2",
    "IPython>=8.18.1",
    "nbsphinx>=0.9.5",
]

[[tool.uv.index]]
name = "research"
url = "https://api.pyx.dev/simple/krv/research"
publish-url = "https://api.pyx.dev/v1/upload/krv/research"
explicit=true
